# DAG-Pipeline

./: .env.example  .gitignore  Dockerfile  README.md  app.db  docker-compose.yml  poetry.toml  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  downloads.py  pipelines.py
app/core/: config.py  kafka_client.py
app/database/: base_class.py  session.py
app/models/: __init__.py  pipeline.py
app/schemas/: pipeline.py
app/services/: orchestrator.py
migrations/: env.py
migrations/versions/: e7b21b132864_initial.py
ui/: .env.example  Dockerfile  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: CSVPipelineUpload.tsx  CSVUpload.tsx  KafkaLogs.tsx  PipelineManager.tsx  StreamLogs.tsx
ui/components/ui/: Button.tsx  Card.tsx
uploads/: sample.csv  sample1.csv  text.csv
workers/: universal_worker.py
