[tool.poetry]
name = "fastapi-backend-boilerplate"
version = "0.1.0"
description = "FastAPI Backend Boilerplate with SQLAlchemy and Alembic"
authors = ["eross220@proton.me"]
readme = "README.md"
packages = [{include = "app"}]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.1"
alembic = "^1.4.3"
uvicorn = "*"
sqlalchemy = "*"
pydantic = "*"
python-multipart = "*"
requests = "*"
python-dotenv = "*"
tomli = "^2.2.1"
redis = "^6.4.0"
rq = "^2.5.0"
kafka-python = "^2.2.15"
pandas = "^2.3.1"
websockets = "^15.0.1"
openai = "^1.100.2"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

